--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
   <h1>Experiments</h1>
   <a href="/orange-radio-spinners/spinners.html" title="Orange Radio Spinners">Orange Radio Spinners</a>
+  <a href="/orange-radio-spinners-gif/index.html" title="GIF Spinners">Gif Spinners</a>
 </body>
 </html>
