solutions to full player problems

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Dylan's Tests</title>
 </head>
 <body>
   <h1>Experiments</h1>
   <a href="/orange-radio-spinners/spinners.html" title="Orange Radio Spinners">Orange Radio Spinners</a>
   <a href="/orange-radio-spinners-gif/index.html" title="GIF Spinners">Gif Spinners</a>
+  <a href="/orange-radio-css-animation/index.html" title="Animations et CSS">Animtions et CSS</a>
+  <a href="/test-project/index.html" title="Test avec SCSS">Test avec SCSS</a>
 </body>
 </html>
