--- a/orange-radio-css-animation/index.html
+++ b/orange-radio-css-animation/index.html
@@ -13,27 +13,29 @@
 <div>
   <a href="#" id="start-anim">Clic dans la zone grise pour animer</a>
   <div id="square-container">
-    <div id="red-square"></div>
-    <div id="green-square"></div>
-    <div id="blue-square"></div>
-  </div>
-</div>
-
-<div id="parent">
-  <div id="child1">
-    test
-  </div>
-  <div id="child2">
-    test
+    <div class="box" id="red"></div>
+    <div class="box" id="green"></div>
+    <div class="box" id="blue"></div>
   </div>
 </div>
 
 <script type="text/javascript">
  $('#start-anim').click(function() {
-  $('#red-square').addClass("move1");
-  $('#green-square').addClass("move2");
-  $('#blue-square').addClass("move4");
-  console.log('toto');
+
+    var red = $('#red');
+    var blue = $('#blue');
+    var green = $('#green');
+    var animEnd = 'webkitAnimationEnd oanimationend oAnimationEnd msAnimationEnd animationend';
+
+    red.addClass("move");
+    red.one(animEnd, function() {
+      blue.addClass("move");
+    });
+    blue.one(animEnd, function() {
+      green.addClass("move");
+    });
+
+
  });
 </script>
 </body>
