--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <h1>Experiments</h1>
   <a href="/orange-radio-spinners/spinners.html" title="Orange Radio Spinners">Orange Radio Spinners</a>
   <a href="/orange-radio-spinners-gif/index.html" title="GIF Spinners">Gif Spinners</a>
-  <a href="/orange-radio-css-animation/index.html" title="Animations et CSS">Animtions et CSS</a>
+  <a href="/orange-radio-css-animation/index.html" title="Animations et CSS">Animations Fullscreen</a>
   <a href="/test-project/index.html" title="Test avec SCSS">Test avec SCSS</a>
 </body>
 </html>
