--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 <body>
   <h1>Experiments</h1>
   <a href="/orange-radio-spinners/spinners.html" title="Orange Radio Spinners">Orange Radio Spinners</a>
+  <br>
   <a href="/orange-radio-spinners-gif/index.html" title="GIF Spinners">Gif Spinners</a>
+  <br>
   <a href="/orange-radio-css-animation/index.html" title="Animations et CSS">Animations Fullscreen</a>
-  <a href="/test-project/index.html" title="Test avec SCSS">Test avec SCSS</a>
+  <br>
+  <a href="/test-project/index.html" title="Mise en page">Mise en page</a>
+  <br>
 </body>
 </html>
