--- a/test-project/index.html
+++ b/test-project/index.html
@@ -52,10 +52,12 @@
       r_content.addClass('fade-in-first-content');
 
       gradient.one(transEnd, function() {
-        red.removeClass('fade-in-first-logo').addClass('slide-out');
+        red.removeClass('fade-in-first-logo').addClass('out-logo slide-out');
         r_content.removeClass('fade-in-first-content').addClass('fade-out');
         green.addClass('slide-in');
         g_content.addClass('fade-in');
+        $( this ).off(transEnd);
+        console.log('gradient finish');
       });
 
       green.one(transEnd, function() {
@@ -65,6 +67,7 @@
         g_content.removeClass('fade-in').addClass('fade-out');
         blue.addClass('slide-in');
         b_content.addClass('fade-in');
+        console.log('green finish');
       });
       blue.one(transEnd, function() {
         green.removeClass('slide-out');
@@ -72,6 +75,7 @@
         blue.removeClass('slide-in').addClass('slide-out');
         b_content.removeClass('fade-in').addClass('fade-out');
         gradient.removeClass('fullplayer-in').addClass('fullplayer-out');
+        console.log('blue finish');
       });
 
     });
