Animation for Deezer Player

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
   <br>
   <br>
   <br>
-  <a href="/orange-radio-css-animation/index.html" title="Animations et CSS">Animations Fullscreen</a>
+  <a href="/orange-radio-css-animation-favorite-indicator/index.html" title="Animations Favorite indicator">Animations Favorite indicator</a>
   <br>
   <br>
   <br>
-  <a href="/test-project/index.html" title="Mise en page">Mise en page</a>
+  <a href="/orange-radio-css-animation-fullscreen/index.html" title="Animation Fullscreen">Animation Fullscreen</a>
+  <br>
+  <br>
+  <br>
+  <a href="/orange-deezer-css-animation-fullplayer/index.html" title="Animation Deezer Fullplayer">Animation Deezer Fullplayer</a>
   <br>
   <br>
   <br>
