Working animation with example.

--- a/orange-radio-spinners-gif/index.html
+++ b/orange-radio-spinners-gif/index.html
@@ -1,10 +1,15 @@
 <html>
 <head>
   <title>GIF</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <p>Voilà un test de deux spinners en gif, à voir celui qu'on préfère</p>
 <img src="essai-spinner.gif" alt="">
 <img src="essai-spinner2.gif">
+<div class="gif-container">
+  <img src="gif_cover.gif">
+</div>
 </body>
 </html>
