--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
   <br>
   <br>
   <br>
+  <a href="/GIF-Cover-Fullscreen/index.html" title="Animation Deezer Fullplayer">GIT Cover Fullplayer</a>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
