--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <br>
   <br>
   <br>
-  <a href="/GIF-Cover-Fullscreen/index.html" title="Animation Deezer Fullplayer">GIT Cover Fullplayer</a>
+  <a href="/GIF-Cover-Fullscreen/index.html" title="Animation Deezer Fullplayer">GIF Cover Fullplayer</a>
   <br>
   <br>
   <br>
