Start working on Deezer Lyrics animation

--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
   <br>
   <br>
   <br>
+  <a href="/Deezer-lyrics/index.html" title="Animation Deezer Lyrics">Deezer Lyrics</a>
+  <br>
+  <br>
+  <br>
 </body>
 </html>
