Latest working version

--- a/Deezer-lyrics/index.html
+++ b/Deezer-lyrics/index.html
@@ -9,17 +9,17 @@
   <div class="fullplayer">
     <div class="artwork-container anim"></div>
     <div class="lyrics-container anim">
-        <p class="current-line">Anyway the wind blows doesn't really matter to me, to me.</p>
-        <p class="second-line">Mama, just killed a man</p>
+        <p class="current-line" id"1">Anyway the wind blows doesn't really matter to me, to me.</p>
+        <p class="second-line" id"2">Mama, just killed a man</p>
 
-        <!-- <p>Oh, mama mia, mama mia (Mama mia, let me go.)</p>
-        <p>Beelzebub has a devil put aside for me, for me, for me.</p>
+        <p class="unvisible-lines" id"3">Oh, mama mia, mama mia (Mama mia, let me go.)</p>
+        <p class="unvisible-lines" id"4">Beelzebub has a devil put aside for me, for me, for me.</p>
 
-        <p>Too late, my time has come,</p>
-        <p>Sent shivers down my spine,</p>
+        <p class="unvisible-lines" id"5">Too late, my time has come,</p>
+        <p class="unvisible-lines" id"6">Sent shivers down my spine,</p>
 
-        <p>I see a little silhouetto of a man,</p>
-        <p>Scaramouche, Scaramouche, will you do the Fandango?</p> -->
+        <p class="unvisible-lines" id"7">I see a little silhouetto of a man,</p>
+        <p class="unvisible-lines" id"8">Scaramouche, Scaramouche, will you do the Fandango?</p>
     </div>
     <div class="micro-off">
     </div>
